Updated Header to include new bootstrap files in CSS and JS forlders.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Custom Theme 01
+Theme Name: TPCHR LLC
 Author: Daniel Watson
-Description: This is my first theme ever...
+Description: Payroll Company HR; custom WordPress theme.
 Version: 0.0.1
-Tags:
+Tags: Custom, TPC, TPCHR
 */
 .blog-nav li {
   position: relative;
