Applied Pagination to the bloging page.

--- a/style.css
+++ b/style.css
@@ -15,3 +15,12 @@ Tags: Custom, TPC, TPCHR
 .blog-nav li a {
   color: #fff;
 }
+
+.pager {
+    list-style: none;
+}
+.pager li {
+    float: left;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+}
