--- a/css/footer.css
+++ b/css/footer.css
@@ -1,51 +1,48 @@
 .tpchr-footer {
-    color: white;
-    background-color: #969696;
-    padding-bottom: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
-    margin: auto;
+  color: white;
+  background-color: #969696;
+  padding-bottom: 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+  margin: auto;
 }
 
 .tpchr-footer-bottom-phone {
-    background-image: url(../images/phoneIcon.png);
-    background-position: left center;
-    background-repeat: no-repeat;
-    height: 50px;
-    padding-left: 70px;
-    vertical-align: middle;
-
-    font-size: 32px;
-    line-height: 48px;
-    font-weight: 800;
+  background-image: url(../images/phoneIcon.png);
+  background-position: left center;
+  background-repeat: no-repeat;
+  height: 50px;
+  padding-left: 70px;
+  vertical-align: middle;
+  font-size: 32px;
+  line-height: 48px;
+  font-weight: 800;
 }
-
 .tpchr-footer-bottom-phone a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
-
 .tpchr-footer-bottom-phone a:hover {
-    color: lightgray;
+  color: lightgray;
 }
-
 
 .tpchr-footer-bottom-copyright {
-    text-align: center !important;
-    font-size: 13px;
-    line-height: 18px;
-    font-family: 'Open Sans',sans-serif;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 15px;
+  text-align: center !important;
+  font-size: 13px;
+  line-height: 18px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
-.tpchr-footer-bottom-social ul{
-    list-style: none;
+.tpchr-footer-bottom-social ul {
+  list-style: none;
+}
+.tpchr-footer-bottom-social img {
+  max-width: 100%;
+  height: auto;
+  background: url(../images/facebook-icon.png);
 }
 
-.tpchr-footer-bottom-social-fb img{
-    max-width: 100%;
-    height: auto;
-    background: url(../images/facebook-icon.png)
-}
+/*# sourceMappingURL=footer.css.map */
