--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,20 @@
 .tpchr-header-logo {
-    float: left;
+  float: left;
 }
 
 .tpchr-header-control {
-    float: right;
+  float: right;
 }
 
 .tpchr-header-control-nav li {
-    position: relative;
-    display: inline-block;
-    padding: 10px;
-    font-weight: 500;
-    background-color: #428BCA
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  font-weight: 500;
+  background-color: #428BCA;
+}
+.tpchr-header-control-nav li a {
+  color: #fff;
 }
 
-.tpchr-header-control-nav li a {
-    color: #fff;
-}
+/*# sourceMappingURL=header.css.map */
