Re-organized my sass

--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,22 @@
+.tpchr-header-logo {
+  float: left;
+}
+
+.tpchr-header-control {
+  float: right;
+}
+
+.tpchr-header-control-nav li {
+  position: relative;
+  display: inline-block;
+  padding: 10px;
+  font-weight: 500;
+  background-color: #428BCA;
+}
+.tpchr-header-control-nav li a {
+  color: #fff;
+}
+
 .tpchr-footer {
   color: white;
   background-color: #969696;
@@ -45,4 +64,4 @@
   background: url(../images/facebook-icon.png);
 }
 
-/*# sourceMappingURL=footer.css.map */
+/*# sourceMappingURL=theme.css.map */
