--- a/css/scss/_02_footer.scss
+++ b/css/scss/_02_footer.scss
@@ -1,9 +1,12 @@
+
+
 .tpchr-footer {
+    $padding: 60px;
     color: white;
     background-color: #969696;
     padding-bottom: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: $padding;
+    padding-right: $padding;
     margin: auto;
 }
 
@@ -20,9 +23,9 @@
     a {
         color: white;
         text-decoration: none;
-    }
-    a:hover {
-        color: lightgray;
+        &:hover{
+            color: lightgray;
+        }
     }
 }
 
