--- a/css/_02_footer.scss
+++ b/css/_02_footer.scss
@@ -3,7 +3,7 @@
 .tpchr-footer {
     $padding: 60px;
     color: white;
-    background-color: #969696;
+    background-color: color(footercolor);
     padding-bottom: 20px;
     padding-left: $padding;
     padding-right: $padding;
