--- a/css/theme.css
+++ b/css/theme.css
@@ -1,3 +1,12 @@
+body, html {
+  height: 100%;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+}
+
 .tpchr-header-logo {
   float: left;
 }
